fix: range min&max + z-index

--- a/assets/styles/components/mobile-filter.scss
+++ b/assets/styles/components/mobile-filter.scss
@@ -35,7 +35,6 @@
   }
 
   &__range {
-    z-index: 9995;
     margin-bottom: .6rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid #e8e8e8;
